WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310033
[GLib] Stop retrying D-Bus connection for MPRIS after initial failure
https://bugs.webkit.org/show_bug.cgi?id=310033
Summary
[GLib] Stop retrying D-Bus connection for MPRIS after initial failure
Simon Pena
Reported
2026-03-16 09:57:24 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Pena
Comment 1
2026-03-16 10:01:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60704
EWS
Comment 2
2026-03-17 02:57:25 PDT
Committed
309395@main
(1a109d5e2873): <
https://commits.webkit.org/309395@main
> Reviewed commits have been landed. Closing PR #60704 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug