Cherry-pick 309395@main (1a109d5e2873). https://bugs.webkit.org/show_bug.cgi?id=310033

[GLib] Stop retrying D-Bus connection for MPRIS after initial failure
    https://bugs.webkit.org/show_bug.cgi?id=310033

    Reviewed by Philippe Normand.

    MPRIS session creation unconditionally attempts to connect to D-Bus,
    even after previous attempts have failed. On devices where D-Bus is not
    available or the right environment is not configured, this will continue
    generating warnings. This keeps track of the failure and avoids
    re-attempting.

    Tested after unsetting the D-Bus session address.

    * Source/WebCore/platform/audio/glib/MediaSessionGLib.cpp:
    (WebCore::MediaSessionGLib::create):
    * Source/WebCore/platform/audio/glib/MediaSessionGLib.h:

    Canonical link: https://commits.webkit.org/309395@main

Canonical link: https://commits.webkit.org/298234.506@webkitglib/2.50